# EffectiveCpp

./: .gitignore  AWOV.cpp  AWOV.h  CMakeLists.txt  DerivedAWOV.cpp  DerivedAWOV.h  DerivedNamedObject.cpp  DerivedNamedObject.h  HomeForSale.cpp  HomeForSale.h  Investment.h  Lock.h  Lock2.cpp  Lock2.h  NamedObject.h  Uncopyable.h  UncopyableHomeForSale.cpp  UncopyableHomeForSale.h  chapter18_Investment.cpp  chapter18_Investment.h  chapter19_HowToDesignClass.cpp  chapter19_HowToDesignClass.h  chapter20_ConstRefParamIsBetter.cpp  chapter20_ConstRefParamIsBetter.h  chapter21_DoNotReturnRef.cpp  chapter21_DoNotReturnRef.h  chapter22_PrivateDataMember.cpp  chapter22_PrivateDataMember.h  chapter23_NoMemberMethodIsBetter.cpp  chapter23_NoMemberMethodIsBetter.h  chapter24_NoMemberMethodForTypeConversion.cpp  chapter24_NoMemberMethodForTypeConversion.h  chapter25_Swap.cpp  chapter25_Swap.h  chapter26_LateDeclaration.cpp  chapter27_casting.cpp  chapter27_casting.h  chapter29_ExceptionSafety.cpp  chapter29_ExceptionSafety.h  chapter30_inline.cpp  (+25 more)
